kubernetes/k3s-01/workloads/immich/stateful-set-machine-learning.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v2.7.5@sha256:320a5595b2487652afc999dbd4c7c25dffc749058b76a9347257a52a484d659f
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          ports:
            - containerPort: 3003
          volumeMounts:
            - name: immich-machine-learning-cache
              mountPath: /cache
      volumes:
        - name: immich-machine-learning-cache
          persistentVolumeClaim:
            claimName: immich-machine-learning-cache-encrypted
