kubernetes/k3s-01/workloads/immich/stateful-set-postgres-vectorchord.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres-vectorchord
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres-vectorchord
  template:
    metadata:
      labels:
        app: immich-postgres-vectorchord
    spec:
      containers:
        - name: immich-postgres-vectorchord
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:bcf63357191b76a916ae5eb93464d65c07511da41e3bf7a8416db519b40b1c23
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 521Mi
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: immich-postgres-vectorchord
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: immich-postgres-vectorchord
          persistentVolumeClaim:
            claimName: immich-postgres-vectorchord
