kubernetes/k3s-01/workloads/immich/stateful-set-server.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.2.4@sha256:d317916b28090c33eb36b308464ea391f8b7df1d850fcfea227a39ec879718c2
          resources:
            requests:
              cpu: 50m
              memory: 768Mi
            limits:
              cpu: 200m
              memory: 1024Mi
          volumeMounts:
            - name: immich-server
              mountPath: /usr/src/app/upload
            - name: immich-gallery
              mountPath: /usr/src/app/upload/library
      volumes:
        - name: immich-server
          persistentVolumeClaim:
            claimName: immich-server
        - name: immich-gallery
          persistentVolumeClaim:
            claimName: immich-gallery
