kubernetes/k3s-01/workloads/immich/service-postgres-vectorchord.yml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres-vectorchord
  namespace: immich
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: immich-postgres-vectorchord
