kubernetes/k3s-01/workloads/immich/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.47fc5c.com`)
      kind: Rule
      services:
        - name: immich-server
          kind: Service
          port: 2283
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: immich-certificate
