kubernetes/k3s-01/workloads/immich/network-policy-machine-learning.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: immich-machine-learning
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: immich-server
      ports:
        - protocol: TCP
          port: 3003
