kubernetes/k3s-01/workloads/immich/network-policy-server.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-server
  namespace: immich
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: immich-server
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 2283
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: immich-machine-learning
      ports:
        - protocol: TCP
          port: 3003
    - to:
      - podSelector:
          matchLabels:
            app: immich-pgvectors
      ports:
        - protocol: TCP
          port: 5432
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: redis
        podSelector:
          matchLabels:
            app: redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
